# AgentRoute

./: .dockerignore  .env.example  .gitignore  Agent.py  Dockerfile  Makefile  alembic.ini  app.py  config.py  docker-compose.yml  interview_questions.md  logging_config.py  mcp_client.py  nginx.conf  project_planning.md  prompt_for_claude_code.md  prompts.py  pyproject.toml  railway.toml  render.py  sandbox.py  schemas.py  skills.py  ui.py  verify_clarify.py  verify_realplan.py  verify_ui.py
.claude/: launch.json
.github/workflows/: ci.yml
agents/: clarify.py  graph.py  nodes.py  planner.py  specialist.py  state.py
api/: __init__.py  auth.py  deps.py  main.py
api/middleware/: __init__.py  rate_limit.py
api/routers/: __init__.py  demo_access.py  health.py  trips.py
cache/: __init__.py  client.py  keys.py
db/: __init__.py  models.py  session.py
db/migrations/: env.py
db/migrations/versions/: a1b2c3d4e5f6_add_demo_users.py  cf903902dd2d_initial_schema.py
monitoring/: __init__.py  callbacks.py  metrics.py  prometheus.yml
monitoring/grafana/dashboards/: dashboards.yml  travel_agent.json
monitoring/grafana/provisioning/datasources/: datasource.yml
rag/: __init__.py  bm25.py  chunk.py  embeddings.py  eval.py  pipeline.py  rerank.py  retriever.py  rewrite.py  store.py  tokenize.py
rag/corpus/: travel_notes.json
tasks/: __init__.py  celery_app.py  trip_tasks.py
tests/: conftest.py  test_api.py  test_cache.py  test_graph.py  test_rag.py  test_sandbox_skills.py  test_scenarios.py  test_schemas.py
tests/eval/: __init__.py  evaluator.py
