[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "travel-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "celery[redis]",
    "redis[asyncio]",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "alembic",
    "structlog",
    "sentry-sdk[fastapi]",
    "langgraph",
    "langgraph-checkpoint-redis",
    "langgraph-checkpoint-postgres",
    "psycopg[binary,pool]",
    "langsmith",
    "langchain",
    "langchain-community",
    "langchain-mcp-adapters",
    "dashscope",
    "prometheus-fastapi-instrumentator",
    "flower",
    "python-dotenv",
    "pydantic>=2",
    "pydantic-settings",
    "tenacity",
    "prometheus_client",
    "httpx",
    "nest_asyncio",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "anyio",
]

[tool.pytest.ini_options]
# testpaths 让「无参数 pytest（如 --cov 不带路径）」也从 tests/ 开始收集，
# 从而把 tests/conftest.py 当作初始 conftest —— 其中的 pytest_plugins=["anyio"] 才合法。
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
# 迁移脚本/一次性产物不纳入门禁。
extend-exclude = ["db/migrations"]

[tool.ruff.lint]
# CI 门禁只跑 pyflakes（F）：抓未用导入、未定义名、重复定义等**真实问题**。
# E402（import 不在顶部）/ E702（分号）是本项目刻意为之（日志与 sys.path 装载次序、
# 测试里的紧凑写法），不作为门禁，避免噪音。
select = ["F"]
